--- a/general/controllers.html
+++ b/general/controllers.html
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Controllers
+控制器(Controllers)
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,7 +55,7 @@ Controllers
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Controllers</h1>
+<h1>控制器(Controllers)</h1>
 
 <p>控制器(Controllers)是你的 application 的核心動力，決定了如何處理 HTTP 所發出的要求。</p>
 
