--- a/general/urls.html
+++ b/general/urls.html
@@ -58,79 +58,73 @@ URLS
 
 <h1>CodeIgniter URLs</h1>
 
-<p>By default，URLs in CodeIgniter are designed to be search-engine and human friendly.  Rather than using the standard "query string"
-approach to URLs that is synonymous with dynamic systems，CodeIgniter uses a <strong>segment-based</strong> approach:</p>
+<p>CodeIgniter 設計的 URLs 對搜尋引擎及人工閱讀是友善的。相較於使用傳統的查詢字串(query string)的方法，CodeIgniter 則使用的是<strong>分段式(segment-based)</strong>的方法:</p>
+
 
 <code>example.com/<var>news</var>/<dfn>article</dfn>/<samp>my_article</samp></code>
 
-<p class="important"><strong>注意:</strong> Query string URLs can be optionally enabled，as described below.</p>
+<p class="important"><strong>注意:</strong> 傳統 Query string URLs 的方式如下所述，可以依需求選擇性的啟動。</p>
 
-<h2>URI Segments</h2>
+<h2>分段式 URI</h2>
 
-<p>The segments in the URL，in following with the 模型-檢視-控制器 approach，usually represent:</p>
+<p>分段式的 URL 遵循模型-檢視-控制器(MVC)模式，通常呈現如下:</p>
 
 <code>example.com/<var>class</var>/<dfn>function</dfn>/<samp>ID</samp></code>
 
 <ol>
-<li>The first segment represents the controller <strong>class</strong> that should be invoked.</li>
-<li>The second segment represents the class <strong>function</strong>，or method，that should be called.</li>
-<li>The third，and any additional segments，represent the ID and any variables that will be passed to the controller.</li>
+<li>第一段代表的是控制器(controller)的<strong>class</strong> 被啟用。</li>
+<li>第二段代表的是類別(class)的 <strong>function</strong> 或者是 method 被呼叫使用。</li>
+<li>第三段之後的，代表的是 ID 或是任何變數準備要傳遞給控制器(controller)使用。</li>
+
 </ol>
 
-<p>The <a href="../libraries/uri.html">URI Class</a> and the <a href="../helpers/url_helper.html">URL 補助函數</a>
-contain functions that make it easy to work with your URI data.  In addition，your URLs can be remapped using the
-<a href="routing.html">URI Routing</a> feature for more flexibility.</p>
+<p><a href="../libraries/uri.html">URI 類別</a> 以及 <a href="../helpers/url_helper.html">URL 補助函數</a>兩者裡頭有
+些 functions 可以讓你輕鬆的處理 URI 資料，除此之外，你的 URLs 可以用 <a href="routing.html">URI Routing</a>使用對映(remap)的功能，使用上將會更有彈性。</p>
 
 
+<h2>移除 index.php 檔案</h2>
 
-<h2>Removing the index.php file</h2>
-
-<p>By default，the <strong>index.php</strong> file will be included in your URLs:</p>
+<p><strong>index.php</strong> 這個檔案通常包含在你的 URLs 裡頭:</p>
 
 <code>example.com/<var>index.php</var>/news/article/my_article</code>
 
-<p>You can easily remove this file by using a .htaccess file with some simple rules. Here is an example
- of such a file，using the "negative" method in which everything is redirected except the specified items:</p>
+<p>你可以輕鬆的把 index.php 用 .htaccess 移除，只消對 index.php 設定些簡單的規則。請參考底下的範例。使用 negative 方式把全部都導向，除了某些制定的項目:</p>
 
 <code>RewriteEngine on<br />
 RewriteCond $1 !^(index\.php|images|robots\.txt)<br />
 RewriteRule ^(.*)$ /index.php/$1 [L]</code>
 
-<p>In the above example，any HTTP request other than those for index.php，images，and robots.txt is treated as
-a request for your index.php file.</p>
+<p>在上述的範例中，全部的像是 index.php、images、robots.txt 的 HTTP request 都被當成是請求 index.php 檔案。</p>
 
+<h2>加入 URL 後置字串</h2>
 
-<h2>Adding a URL Suffix</h2>
-
-<p>In your <dfn>config/config.php</dfn> file you can specify a suffix that will be added to all URLs generated
-by CodeIgniter.  For example，if a URL is this:</p>
+<p><dfn>config/config.php</dfn> 檔案可以設定後置字串，讓所有的由 CodeIgniter 產生的 URLs 都附戴上去。舉例來說，假如某個 URL 如下:</p>
 
 <code>example.com/index.php/products/view/shoes</code>
 
-<p>You can optionally add a suffix，like <kbd>.html</kbd>，making the page appear to be of a certain type:</p>
+<p>你可以依照需求增加後置字串，像加上 <kbd>.html</kbd> 讓你的葉面看起來像底下的型式:</p>
 
 <code>example.com/index.php/products/view/shoes.html</code>
 
 
-<h2>Enabling Query Strings</h2>
+<h2>啟動 Query Strings</h2>
 
-<p>In some cases you might prefer to use query strings URLs:</p>
+<p>某些時候，你也許想要使用 query strings URLs:</p>
 
 <code>index.php?c=products&amp;m=view&amp;id=345</code>
 
-<p>CodeIgniter optionally supports this 、相容性，which can be enabled in your <dfn>application/config.php</dfn> file. If you
-open your config file you'll see these items:</p>
+<p>CodeIgniter 也有提供這個功能，可以到 <dfn>application/config.php</dfn> 檔案中開啟底下的設定:</p>
 
 <code>$config['enable_query_strings'] = FALSE;<br />
 $config['controller_trigger'] = 'c';<br />
 $config['function_trigger'] = 'm';</code>
 
-<p>If you change "enable_query_strings" to TRUE this feature will become active.  Your controllers and functions will then
-be accessible using the "trigger" words you've set to invoke your controllers and methods:</p>
+<p>只要把 "enable_query_strings" 設定為 TRUE，這個功能就會啟動。</p>
+
 
 <code>index.php?c=controller&amp;m=method</code>
 
-<p class="important"><strong>Please note:</strong> If you are using query strings you will have to build your own URLs，rather than utilizing
+<p class="important"><strong>請注意:</strong> If you are using query strings you will have to build your own URLs，rather than utilizing
 the URL helpers (and other helpers that generate URLs，like some of the form helpers) as these are designed to work with
 segment based URLs.</p>
 
