--- a/general/views.html
+++ b/general/views.html
@@ -57,11 +57,11 @@ Views
 
 <h1>Views</h1>
 
-<p>A <dfn>view</dfn> is simply a web page，or a page fragment，like a header，footer，sidebar，etc.
-In fact，views can flexibly be embedded within other views (within other views，etc.，etc.) if you need this type
-of hierarchy.</p>
+<p><dfn>檢視(view)</dfn> 可以是網頁、頁面的片斷像是 header，footer，sidebar 之類的。事實上，如果你需要這樣的階層架構的話，檢視(views)還可以固定的嵌入在其他的 view 裡頭。</p>
 
-<p>Views are never called directly，they must be loaded by a <a href="controllers.html">controller</a>.  Remember that in an MVC framework，the Controller acts as the
+<p>檢視(Views)無法直接被呼叫，它必須被<a href="controllers.html">控制器(controller)</a>所呼叫。還記得在
+
+Remember that in an MVC framework，the Controller acts as the
 traffic cop，so it is responsible for fetching a particular view. If you have not read the <a href="controllers.html">Controllers</a> page
 you should do so before continuing.</p>
 
