--- a/installation/downloads.html
+++ b/installation/downloads.html
@@ -83,8 +83,9 @@
 
 <h1><a name="svn" id="svn"></a>Subversion 伺服器</h1>
 <p><a href="http://subversion.tigris.org">Subversion</a> 為版本控制系統。 </p>
-<p>可由公開的 subversion 服務 <a href="http://dev.ellislab.com/svn/CodeIgniter/trunk">http://dev.ellislab.com/svn/CodeIgniter/trunk</a> 取得。please note that while every effort is made to keep this codebase functional，we cannot guarantee the functionality of code taken from the repository.</p>
-<p>Beginning with version 1.6.1，version snapshots (tags) are also available via the Subversion server via <a href="http://dev.ellislab.com/svn/CodeIgniter/tags">http://dev.ellislab.com/svn/CodeIgniter/tags</a>.</p>
+<p>程式碼可由公開的 subversion 伺服器 <a href="http://dev.ellislab.com/svn/CodeIgniter/trunk">http://dev.ellislab.com/svn/CodeIgniter/trunk</a> 取得。請注意我們所有全力撰寫的程式都是要維持程式功能正常運作，但我們無法保證從這個儲存庫取得的程式，它的功能可以完全運作正常。</p>
+
+<p>version 1.6.1 之後的程式，也可由此 <a href="http://dev.ellislab.com/svn/CodeIgniter/tags">http://dev.ellislab.com/svn/CodeIgniter/tags</a>取得。</p>
 </div>
 <!-- END CONTENT -->
 
