--- a/license.html
+++ b/license.html
@@ -69,7 +69,7 @@ All rights reserved.</p>
 <p>You are permitted to use，copy，modify，and distribute the Software and its documentation，with or without modification，for any purpose，provided that the following conditions are met:</p>
 
 <ol>
-<li>A copy of this license agreement must be included with the distribution.</li>
+<li>A copy of this 許可協議 must be included with the distribution.</li>
 <li>Redistributions of source code must retain the above copyright notice in all source code files.</li>
 <li>Redistributions in binary form must reproduce the above copyright notice in the documentation and/or other materials provided with the distribution.</li>
 <li>Any files that have been modified must carry notices stating the nature of the change and the names of those who changed them.</li>
