--- a/overview/at_a_glance.html
+++ b/overview/at_a_glance.html
@@ -63,24 +63,16 @@
 <p>CodeIgniter 是讓人建構 PHP 網頁應用程式的工具組。當你打算從頭開發時，CodeIgniter 針對了常用的需求提供豐富的程式庫，並有藉由間單的操作介面和邏輯結構來存取這些程式庫，目的是讓你在開發專案時可以更加快速。CodeIgniter 只需要使用最少量的程式碼，讓你的創造力可以專注在開發專案。</p>
 
 <h2>CodeIgniter 可自由取得</h2>
-<p>CodeIgniter is licensed under an Apache/BSD-style open source license so you can use it however you please.
-For more information please read the <a href="../license.html">license agreement</a>.</p>
+<p>CodeIgniter 採用 Apache/BSD-style open source license 授權，所以你可以隨心所欲使用。詳細的授權內容請閱讀 <a href="../license.html">許可協議</a>。</p>
 
 
 <h2>CodeIgniter 可在 PHP 4 上運作</h2>
-<p>CodeIgniter 相容於 PHP 4.  
-Although we would have loved to take advantage of the better object handling
-in PHP 5 since it would have simplified some things we had to find creative solutions for (looking your way，multiple inheritance),
-at the time of this writing PHP 5 is not in widespread use，which means we would be alienating most of our
-potential audience.  Major OS vendors like RedHat are moving slowly to support PHP 5，and they are unlikely to do so in the short term，so
-we felt that it did not serve the best interests of the PHP community to write CodeIgniter in PHP 5.</p>
+<p>CodeIgniter 相容於 PHP4。雖然用 PHP5 的物件處理可以簡化我們解決一些難題，但在寫這個系統時，PHP5 還未廣為使用，使用 PHP4 可以避免孤立我們大半的用戶。主要的系統供應商像是 Redhat 支援 PHP5 的速度還蠻慢的，短期內也沒有支援的打算，所以我們覺得他們對 PHP 社群在 PHP5 開發 CodeIgniter 並沒有什麼太大的興趣。</p>
 
-<p>注意:  CodeIgniter will run on PHP 5.  It simply does not take advantage of any native features that are only available in that version.</p>
+<p>注意:  CodeIgniter 支援 PHP 5，只是沒有使用它內建的功能。 </p>
 
 <h2>CodeIgniter 很輕盈</h2>
-<p>真的非常輕盈。  核心系統只需要少量的程式庫。 This is in stark contrast to many frameworks that require significantly more resources.
-Additional libraries are loaded dynamically upon request，based on your needs for a given process，so the base system
-is very lean and 相當快.
+<p>真的非常輕盈。核心系統只需要少量的程式庫，比較啟需要很多資源的 framework 是很明顯的對比。不過額外的程式庫，還是可以依造需求動態的載入近來、所以基本系統是相當精簡且快速。
 </p>
 
 <h2>CodeIgniter 很快</h2>
@@ -88,8 +80,7 @@ is very lean and 相當快.
 
 
 <h2>CodeIgniter 使用 M-V-C 架構</h2>
-<p>CodeIgniter 使用模型-檢視-控制器(MVC)架構，iapproach，which allows great separation between logic and presentation.
-This is particularly good for projects in which designers are working with your template files，as the code these file contain will be minimized. We describe MVC in more detail on its own page.</p>
+<p>CodeIgniter 使用模型-檢視-控制器(MVC)架構，允許把邏輯結構以及視覺呈現分離開來。這樣分離的方式對於開發專案十分的好，可以讓設計師處理只有最少量程式的樣板檔案即可，後面的幾頁，MVC 會更清楚的說明。</p>
 
 <h2>CodeIgniter 建立乾淨的 URLs</h2>
 <p>CodeIgniter 所產生的 URLs 相當的清楚且對搜尋引擎是友善的。相較於使用傳統的查詢字串(query string)的方法，CodeIgniter 則使用的是分段式(segment-based)的方法：</p>
