--- a/toc.html
+++ b/toc.html
@@ -99,7 +99,7 @@
 	<li><a href="general/reserved_names.html">保留字</a></li>
 	<li><a href="./general/views.html">檢視(Views)</a></li>
 	<li><a href="./general/models.html">模型(Models)</a></li>
-	<li><a href="./general/helpers.html">補助函數</a></li>
+	<li><a href="./general/helpers.html">補助函數(Helpers)</a></li>
 	<li><a href="./general/plugins.html">Plugins</a></li>
 	<li><a href="./general/libraries.html">使用 CodeIgniter 程式庫</a></li>
 	<li><a href="./general/creating_libraries.html">建立自己的程式庫</a></li>
