--- a/general/urls.html
+++ b/general/urls.html
@@ -63,7 +63,7 @@ URLS
 
 <code>example.com/<var>news</var>/<dfn>article</dfn>/<samp>my_article</samp></code>
 
-<p class="important"><strong>注意:</strong> 傳統 Query string URLs 的方式如下所述，可以依需求選擇性的啟動。</p>
+<p class="important"><strong>注意:</strong> 傳統 Query string URLs 的方式可以參考底下的說明，還是可以依需求選擇性的啟動。</p>
 
 <h2>分段式 URI</h2>
 
@@ -78,8 +78,8 @@ URLS
 
 </ol>
 
-<p><a href="../libraries/uri.html">URI 類別</a> 以及 <a href="../helpers/url_helper.html">URL 補助函數</a>兩者裡頭有
-些 functions 可以讓你輕鬆的處理 URI 資料，除此之外，你的 URLs 可以用 <a href="routing.html">URI Routing</a>使用對映(remap)的功能，使用上將會更有彈性。</p>
+<p><a href="../libraries/uri.html">URI 類別</a> 以及 <a href="../helpers/url_helper.html">URL 補助函數</a> 兩者裡頭有
+些 functions 可以讓你輕鬆的處理 URI 資料，除此之外，你的 URLs 可以用 <a href="routing.html">URI Routing</a> 對映(remap)的功能，使用上將會更有彈性。</p>
 
 
 <h2>移除 index.php 檔案</h2>
@@ -94,7 +94,7 @@ URLS
 RewriteCond $1 !^(index\.php|images|robots\.txt)<br />
 RewriteRule ^(.*)$ /index.php/$1 [L]</code>
 
-<p>在上述的範例中，全部的像是 index.php、images、robots.txt 的 HTTP request 都被當成是請求 index.php 檔案。</p>
+<p>在上述的範例中，像是 index.php、images、robots.txt 的全部 HTTP request 都會被當成是 request index.php 檔案。</p>
 
 <h2>加入 URL 後置字串</h2>
 
@@ -102,7 +102,7 @@ RewriteRule ^(.*)$ /index.php/$1 [L]</code>
 
 <code>example.com/index.php/products/view/shoes</code>
 
-<p>你可以依照需求增加後置字串，像加上 <kbd>.html</kbd> 讓你的葉面看起來像底下的型式:</p>
+<p>你可以依照需求增加後置字串，像加上 <kbd>.html</kbd> 讓你的網址看起來像底下的型式:</p>
 
 <code>example.com/index.php/products/view/shoes.html</code>
 
