--- a/database/active_record.html
+++ b/database/active_record.html
@@ -744,7 +744,7 @@ $this-&gt;db-&gt;get('tablename');<br />
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="helpers.html">Query 補助函數 Functions</a>
+上個主題:&nbsp;&nbsp;<a href="helpers.html">Query 補助函數 函數(函數(Functions))</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
