--- a/database/helpers.html
+++ b/database/helpers.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Query 補助函數 Functions : CodeIgniter 使用手冊</title>
+<title>Query 補助函數 函數(函數(Functions)) : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -59,7 +59,7 @@ Query 補助函數
 <div id="content">
 
 
-<h1>Query 補助函數 Functions</h1>
+<h1>Query 補助函數 函數(函數(Functions))</h1>
 
 
 <h2>$this->db->insert_id()</h2>
