--- a/general/reserved_names.html
+++ b/general/reserved_names.html
@@ -99,7 +99,7 @@ will override them.  底下列了些保留字，可別把你的控制器函數(C
 	<li>_ci_load_class</li>
 	<li>_ci_object_to_array</li>
 </ul>
-<h3>Functions</h3>
+<h3>函數(函數(Functions))</h3>
 <ul>
 	<li>is_really_writable()</li>
 	<li>load_class()</li>
