--- a/general/urls.html
+++ b/general/urls.html
@@ -72,9 +72,9 @@ URLS
 <code>example.com/<var>class</var>/<dfn>function</dfn>/<samp>ID</samp></code>
 
 <ol>
-<li>第一段代表的是控制器(controller)的<strong>class</strong> 被啟用。</li>
-<li>第二段代表的是類別(class)的 <strong>function</strong> 或者是 method 被呼叫使用。</li>
-<li>第三段之後的，代表的是 ID 或是任何變數準備要傳遞給控制器(controller)使用。</li>
+<li>第一段代表的是控制器(controller)啟動的<strong>類別(class)</strong>。</li>
+<li>第二段代表的是類別(class)的 <strong>函數(function)</strong> 或者是 method 被呼叫使用。</li>
+<li>第三段之後，代表的是 ID 或是任何變數準備要傳遞給控制器(controller)所使用。</li>
 
 </ol>
 
@@ -137,7 +137,7 @@ segment based URLs.</p>
 <p>
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="controllers.html">Controllers</a></p>
+下個主題:&nbsp;&nbsp;<a href="controllers.html">控制器(Controllers)</a></p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
 
