--- a/libraries/config.html
+++ b/libraries/config.html
@@ -151,7 +151,7 @@ $site_name = $blog_config['site_name'];</code>
 <p>Where <var>item_name</var> is the $config array index you want to change，and <var>item_value</var> is its value.</p>
 
 
-<h2>補助函數 Functions</h2>
+<h2>補助函數 函數(函數(Functions))</h2>
 
 <p>The config class has the following 補助函數:</p>
 
