--- a/libraries/image_lib.html
+++ b/libraries/image_lib.html
@@ -113,7 +113,7 @@ Since the <dfn>maintain_ratio</dfn> option is enabled，the thumb will be as clo
 folder containing the image files must have write permissions.</p>
 
 
-<h2>Processing Functions</h2>
+<h2>Processing 函數(函數(Functions))</h2>
 
 <p>There are four available processing functions:</p>
 
