--- a/libraries/validation.html
+++ b/libraries/validation.html
@@ -327,7 +327,7 @@ the "xss_clean" function，which removes 惡意資料.</p>
 <p><strong>注意:</strong> You will generally want to use the prepping functions <strong>after</strong>
 the validation rules so if there is an error，the original data will be shown in the form.</p>
 
-<h2>Callbacks: Your own Validation Functions</h2>
+<h2>Callbacks: Your own Validation 函數(函數(Functions))</h2>
 
 <p>The validation system supports callbacks to your own validation functions.  This permits you to extend the validation class
 to meet your needs.  For example，if you need to run a database query to see if the user is choosing a unique username，you can
