--- a/libraries/xmlrpc.html
+++ b/libraries/xmlrpc.html
@@ -350,7 +350,7 @@ class Xmlrpc_client extends Controller {
 }
 ?></textarea>
 
-<p>注意: In the above code we are using a "url helper".  You can find more information in the <a href="../general/helpers.html">補助函數 Functions</a> page.</p>
+<p>注意: In the above code we are using a "url helper".  You can find more information in the <a href="../general/helpers.html">補助函數 函數(函數(Functions))</a> page.</p>
 
 <h3>The Server</h3>
 
