--- a/overview/mvc.html
+++ b/overview/mvc.html
@@ -58,11 +58,11 @@ MVC
 
 <h1>模型-檢視-控制器</h1>
 
-<p>CodeIgniter 基於模型-檢視-控制器的開發模式。MVC 是把程式邏輯從視覺的呈現拆開的一種軟體開發方法。實務上，它允許你的網頁包含最少的程式，一但視覺呈現的部份從 PHP 程式中分離出來。</p>
+<p>CodeIgniter 基於模型-檢視-控制器的開發模式。MVC 是把程式邏輯從視覺的呈現拆開的一種軟體開發方法。實務上，它允許你的網頁包含最少的程式，就是把視覺呈現的部份從 PHP 程式中分離出來。</p>
 
 <ul>
 <li><strong>模型(Model)</strong> 代表的結構是你的資料。通常模型類別包含許多函數可用，可以幫助你完成 retrieve，insert，update 資料到你的資料庫裡頭。</li>
-<li><strong>檢視(View)</strong> 用來呈現給使用者的資訊。檢視(View)通常是網頁型式，但是在 CodeIgniter 裡頭，檢視(View)也可以是網頁的片斷，像是 header 或是 footer。他也可以是 RSS 頁面，或是任何其他型式的"頁面(page)"。</li>
+<li><strong>檢視(View)</strong> 用來呈現給使用者的資訊。檢視(View)通常是網頁型式，但是在 CodeIgniter 裡頭，檢視(View)也可以是網頁的片斷，像是 header 或是 footer。他也可以是 RSS 頁面，或是任何其他 "頁面(page)" 的型式。</li>
 
 <li><strong>控制器(Controller)</strong> 提供像是 <em>中間人的角色</em> 在模型(Model)跟檢視(View)之間，或者是任何其他的資源需要處理 HTTP request 以及產生網頁的地方出現。</li>
 
