--- a/changelog.html
+++ b/changelog.html
@@ -367,7 +367,7 @@ SVN Revision: 1155</p>
 			<li>Removed &quot;scripts&quot; from the auto-load search path. Scripts were deprecated 
 				in Version 1.4.1 (September 21，2006). If you still need to use them for legacy reasons，they must now be manually loaded in each Controller.</li>
 			<li>Added a <a href="general/reserved_names.html">保留字</a> page to the userguide，and migrated reserved controller names into it.</li>
-			<li>Added a <a href="general/common_functions.html">通用函數(Common Functions)</a> page to the userguide for globally available functions.</li>
+			<li>Added a <a href="general/common_functions.html">通用函數(Common 函數(函數(Functions)))</a> page to the userguide for globally available functions.</li>
 			<li>Improved security and performance of xss_clean().</li>
 		</ul>
 	</li>
