--- a/database/results.html
+++ b/database/results.html
@@ -177,7 +177,7 @@ Query Results
 
 
 
-<h1>Result 補助函數 Functions</h1>
+<h1>Result 補助函數 函數(函數(Functions))</h1>
 
 
 <h2>$query->num_rows()</h2>
@@ -229,7 +229,7 @@ $query2->free_result();  // The $query2 result object will no longer be availabl
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="helpers.html">Query 補助函數 Functions</a>
+下個主題:&nbsp;&nbsp;<a href="helpers.html">Query 補助函數 函數(函數(Functions))</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
