--- a/general/helpers.html
+++ b/general/helpers.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>補助函數 Functions : CodeIgniter 使用手冊</title>
+<title>補助函數 函數(函數(Functions)) : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-補助函數 Functions
+補助函數 函數(函數(Functions))
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,7 +55,7 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>補助函數 Functions</h1>
+<h1>補助函數 函數(函數(Functions))</h1>
 
 <p>補助函數，as the name suggests，help you with tasks.  Each helper file is simply a collection of functions in a particular
 category.  There are <dfn>URL 補助函數</dfn>，that assist in creating links，there are <dfn>Form 補助函數</dfn>
