--- a/toc.html
+++ b/toc.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>章節列表: CodeIgniter 使用手冊</title>
+<title>目錄: CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='userguide.css' />
@@ -43,7 +43,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-章節列表
+目錄
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,7 +56,7 @@
 <div id="content">
 
 
-<h1>章節列表</h1>
+<h1>目錄</h1>
 
 <table cellpadding="0" cellspacing="10" border="0" width="100%">
 <tr>
