--- a/general/alternative_php.html
+++ b/general/alternative_php.html
@@ -89,7 +89,7 @@ will be shown as <kbd>eval()</kbd> errors.</p>
 <h2>Alternative Control Structures</h2>
 
 <p>Controls structures，like <var>if</var>，<var>for</var>，<var>foreach</var>，and <var>while</var> can be
-written in a simplified format as well.  Here is an example using foreach:</p>
+written in a simplified format as well.  這裡有個example using foreach:</p>
 
 <code>
 &lt;ul><br />
