--- a/general/models.html
+++ b/general/models.html
@@ -74,7 +74,7 @@ Models
 
 <p>Models are PHP classes that are designed to work with information in your database.  For example，let's say
 you use CodeIgniter to manage a blog.  You might have a model class that contains functions to insert，update，and
-retrieve your blog data. Here is an example of what such a model class might look like:</p>
+retrieve your blog data. 這裡有個example of what such a model class might look like:</p>
 
 <code>
 class&nbsp;Blogmodel&nbsp;extends&nbsp;Model&nbsp;{<br />
@@ -185,7 +185,7 @@ $this->load->model('<var>Model_name</var>'，'<kbd>fubar</kbd>');<br />
 $this-><kbd>fubar</kbd>->function();
 </code>
 
-<p>Here is an example of a controller，that loads a model，then serves a view:</p>
+<p>這裡有個example of a controller，that loads a model，then serves a view:</p>
 
 <code>
 class&nbsp;Blog_controller&nbsp;extends&nbsp;Controller&nbsp;{<br />
