--- a/general/controllers.html
+++ b/general/controllers.html
@@ -287,8 +287,7 @@ function _utility()<br />
 
 <p>只要在 <dfn>application/controllers</dfn> 裡頭新增子目錄，然後把你的控制器放進去即可。</p>
 
-<p><strong>注意:</strong>&nbsp; When using this feature the first segment of your URI must specify the folder.  For example，lets say you have a controller
-located here:</p>
+<p><strong>注意:</strong>&nbsp; 如果要使用這個功能的話，URI 的第一個分段必須指定到目錄去。舉例來說，假設你有個控制器在這個:</p>
 
 <code>application/controllers/<kbd>products</kbd>/shoes.php</code>
 
