--- a/general/managing_apps.html
+++ b/general/managing_apps.html
@@ -77,7 +77,7 @@ To do so open your main <kbd>index.php</kbd> and set a <em>full server path</em>
 <code>$application_folder = "/Path/to/your/application";</code>
 
 
-<h2>Running Multiple Applications with one CodeIgniter Installation</h2>
+<h2>Running Multiple Applications with one CodeIgniter 安裝</h2>
 
 <p>If you would like to share a common CodeIgniter installation to manage several different applications simply 
 put all of the directories located inside your <kbd>application</kbd> folder into their
