--- a/overview/index.html
+++ b/overview/index.html
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Introduction
+簡介
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -63,7 +63,7 @@ Introduction
 		<li><a href="at_a_glance.html">CodeIgniter 匆匆一瞥</a></li>
 		<li><a href="features.html">Supported Features</a></li>
 		<li><a href="appflow.html">程式流程圖</a></li>
-		<li><a href="mvc.html">Introduction to the 模型-檢視-控制器</a></li>
+		<li><a href="mvc.html">簡介 to the 模型-檢視-控制器</a></li>
 		<li><a href="goals.html">設計與架構目標</a></li>
 		<li><a href="package.html">Package Description</a></li>
 	</ul>
