--- a/general/controllers.html
+++ b/general/controllers.html
@@ -222,7 +222,7 @@ class Products extends Controller {<br />
 }</code>
 
 <p class="important"><strong>非常重要:</strong>&nbsp; 如果你的控制器裡頭有個 <kbd>_remap()</kbd> 函數的話，那麼它會 <strong>總是</strong>
-不理會你的 URI 內容是什麼東西。也就是說，這個方式會改寫掉原本函數呼叫的規則，並且允許使用自己定義的函數路由規則(function routing rules)。</p>
+不理會你的 URI 內容是什麼東西。也就是說，這個方式會改寫掉原本函數呼叫的規則，並且允許使用你自己定義的函數路由規則(function routing rules)。</p>
 
 <p>改寫函數呼叫(通常是在URI的第二個分段)將會被當成是參數通過<kbd>_remap()</kbd>函數:</p>
 
