--- a/toc.html
+++ b/toc.html
@@ -100,7 +100,7 @@
 	<li><a href="./general/views.html">檢視(Views)</a></li>
 	<li><a href="./general/models.html">模型(Models)</a></li>
 	<li><a href="./general/helpers.html">補助函數(Helpers)</a></li>
-	<li><a href="./general/plugins.html">外掛模組</a></li>
+	<li><a href="./general/plugins.html">外掛模組(Plugins)</a></li>
 	<li><a href="./general/libraries.html">使用 CodeIgniter 程式庫</a></li>
 	<li><a href="./general/creating_libraries.html">建立自己的程式庫</a></li>
 	<li><a href="./general/core_classes.html">新增核心類別</a></li>
@@ -114,7 +114,7 @@
 	<li><a href="./general/profiling.html">Profiling Your Application</a></li>
 	<li><a href="./general/managing_apps.html">管理 Applications</a></li>
 	<li><a href="./general/alternative_php.html">Alternative PHP Syntax</a></li>
-	<li><a href="./general/security.html">Security</a></li>
+	<li><a href="./general/security.html">安全性</a></li>
 	<li><a href="./general/styleguide.html">PHP 樣式指南</a></li>	
 	<li><a href="./doc_style/index.html">Writing Documentation</a></li>
 </ul>
